Change file projects in complex

--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="format-detection" content="telephone=no">
     <meta name="format-detection" content="address=no">
-
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,400" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="libs/slick-carousel/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="libs/slick-carousel/slick/slick-theme.css"/>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header id="header">
@@ -190,69 +189,68 @@
                 </div>
             </aside>
             <main id="main">
-                <div class="test">
-                    <div>
-                        <img src="img/adv1.jpg" alt="">
+                <div class="wrap">
+                    <div class="slider-wrapper">
+                        <div class="slider">
+                            <div class="slider__img-container">
+                                <img src="img/slider_img1.jpg" alt="product info" class="slider__img">
+                            </div>
+                            <div class="slider__info">
+                                <h1 class="slider__caption">Фрезер кромочный RT0700CX</h1>
+                                <span class="slider__note">Новые поступления фрез</span>
+                                <p class="slider__description">
+                                    Рады представить вам новое поступление высококачественных кромочных фрез с широким диапозоном настроек
+                                </p>
+                                <a href="#" class="slider__buy-btn">Купить сейчас</a>
+                            </div>
+                        </div>
                     </div>
-                    <div>
-                        <img src="img/adv1.jpg" alt="">
+                    <div class="slider-wrapper">
+                            <div class="slider">
+                                <div class="slider__img-container">
+                                    <img src="img/slider_img1.jpg" alt="product info" class="slider__img">
+                                </div>
+                                <div class="slider__info">
+                                    <h1 class="slider__caption">Фрезер кромочный RT0700CX</h1>
+                                    <span class="slider__note">Новые поступления фрез</span>
+                                    <p class="slider__description">
+                                        Рады представить вам новое поступление высококачественных кромочных фрез с широким диапозоном настроек
+                                    </p>
+                                    <a href="#" class="slider__buy-btn">Купить сейчас</a>
+                                </div>
+                            </div>
+                        </div>
+                    <div class="slider-wrapper">
+                        <div class="slider">
+                            <div class="slider__img-container">
+                                <img src="img/slider_img1.jpg" alt="product info" class="slider__img">
+                            </div>
+                            <div class="slider__info">
+                                <h1 class="slider__caption">Фрезер кромочный RT0700CX</h1>
+                                <span class="slider__note">Новые поступления фрез</span>
+                                <p class="slider__description">
+                                    Рады представить вам новое поступление высококачественных кромочных фрез с широким диапозоном настроек
+                                </p>
+                                <a href="#" class="slider__buy-btn">Купить сейчас</a>
+                            </div>
+                        </div>
                     </div>
-                    <div>
-                        <img src="img/adv1.jpg" alt="">
+                    <div class="slider-wrapper">
+                        <div class="slider">
+                            <div class="slider__img-container">
+                                <img src="img/slider_img1.jpg" alt="product info" class="slider__img">
+                            </div>
+                            <div class="slider__info">
+                                <h1 class="slider__caption">Фрезер кромочный RT0700CX</h1>
+                                <span class="slider__note">Новые поступления фрез</span>
+                                <p class="slider__description">
+                                    Рады представить вам новое поступление высококачественных кромочных фрез с широким диапозоном настроек
+                                </p>
+                                <a href="#" class="slider__buy-btn">Купить сейчас</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-               <!-- <div class="wrapp">-->
-                <div class="slider">
-                    <button class="slider__nav-btn">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="slider__nav-img" role="presentation">
-                            <use xlink:href="img/prev.svg#prev"></use>
-                        </svg>
-                    </button>
-                    <div class="slider__img-container">
-                        <img src="img/slider_img1.jpg" alt="product info" class="slider__img">
-                    </div>
-                    <div class="slider__info">
-                        <h1 class="slider__caption">Фрезер кромочный RT0700CX</h1>
-                        <span class="slider__note">Новые поступления фрез</span>
-                        <p class="slider__description">
-                            Рады представить вам новое поступление высококачественных кромочных фрез с широким диапозоном настроек
-                        </p>
-                        <a href="#" class="slider__buy-btn">Купить сейчас</a>
-                    </div>
-
-                    <button class="slider__nav-btn">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="slider__nav-img" role="presentation">
-                            <use xlink:href="img/next.svg#next"></use>
-                        </svg>
-                    </button>
-                </div>
-                <!--</div>-->
-            <!--    <div class="wrapp">-->
-                <div class="slider">
-                    <button class="slider__nav-btn">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="slider__nav-img" role="presentation">
-                            <use xlink:href="img/prev.svg#prev"></use>
-                        </svg>
-                    </button>
-                    <div class="slider__img-container">
-                        <img src="img/slider_img1.jpg" alt="product info" class="slider__img">
-                    </div>
-                    <div class="slider__info">
-                        <h1 class="slider__caption">Фрезер кромочный RT0700CX</h1>
-                        <span class="slider__note">Новые поступления фрез</span>
-                        <p class="slider__description">
-                            Рады представить вам новое поступление высококачественных кромочных фрез с широким диапозоном настроек
-                        </p>
-                        <a href="#" class="slider__buy-btn">Купить сейчас</a>
-                    </div>
-
-                    <button class="slider__nav-btn">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="slider__nav-img" role="presentation">
-                            <use xlink:href="img/next.svg#next"></use>
-                        </svg>
-                    </button>
-                </div>
-                <!--</div>-->
                 <div class="hot-sections">
                     <a href="#" class="hot-sections__hot-section">
                         <div class="hot-sections__caption sales">
@@ -542,7 +540,7 @@
         </div>
     </div>
     <footer id="footer">
-        <small class="copyrights">&copy; Link.by 2018</small>
+        <small class="copyrights">&copy; Eltools.by 2018</small>
         <ul class="net-socials">
             <li class="net-socials__item">
                 <a href="#" class="net-socials__link">
@@ -567,16 +565,8 @@
             </li>
         </ul>
     </footer>
-
-    <script type="text/javascript" src="libs/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="libs/slick-carousel/slick/slick.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function(){
-            $('.wrapp').slick({
-                infinite: true,
-                autoplay: true
-            });
-        });
-    </script>
+    <script src="libs/jquery/dist/jquery.js"></script>
+    <script src="libs/slick-carousel/slick/slick.js"></script>
+    <script src="js/slider.js"></script>
 </body>
 </html>
